# persiandateerpnext

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INDENTATION_FIX.md  INSTALLATION.md  QUICK_FIX.md  README.md  TROUBLESHOOTING.md  __init__.py  complete_reinstall.sh  deploy.sh  fix_assets.sh  fix_docker_assets.sh  manifest.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci-cd.yml
persiandateerpnext/: hooks.py  modules.txt
persiandateerpnext/fixtures/: custom_field.json
persiandateerpnext/install/: __init__.py  install.py
persiandateerpnext/persian_date_erpnext/: __init__.py
persiandateerpnext/persian_date_erpnext/doctype/: __init__.py
persiandateerpnext/public/: bundle.json
persiandateerpnext/public/css/: custom.css
persiandateerpnext/public/js/: conflict_resolver.js  debug_check.js  in_words_cleanup.js  togregorian_date.js  topersian_date.js
persiandateerpnext/scripts/: README.md  docker_install.sh  fix_all_assets.sh  fix_assets.py  quick_fix.sh  smart_fix.py  ultimate_fix.sh
scripts/: docker_install.sh
